# opencv

./: CMakeLists.txt  CustomizedOpenCV.podspec  README.md
cmake/: OpenCVUtils.cmake
modules/core/: CMakeLists.txt
modules/imgcodecs/: CMakeLists.txt
modules/imgproc/: CMakeLists.txt
modules/objc/generator/templates/: cmakelists.template
modules/objc/test/: cmakelists.template
